k8s/overlays/qa/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: REPO_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      environment: qa
  template:
    metadata:
      labels:
        environment: qa
    spec:
      imagePullSecrets:
      - name: cool-api-qa
      containers:
      - name: REPO_NAME
