k8s/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: REPO_NAME-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: qa-api.noterm.app
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: qa-REPO_NAME
            port:
              number: 80
